raffia/tests/error/sass/wrong-indent-level.snap
---
source: raffia/tests/error.rs
---
error: unexpected whitespace
  ┌─ wrong-indent-level.sass:3:4
  │
3 │  d: e
  │    ^


